@@ -1,3 +1,11 @@
+2005-12-14  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/Tcl.xcode/project.pbxproj:
+	* macosx/Tcl.xcodeproj/project.pbxproj:
+	* unix/Makefile.in: add new tclTomMath* files.
+
+	* generic/tclBasic.c: replace panic with Tcl_Panic.
+
 2005-12-13  Kevin B. Kenny  <kennykb@acm.org>
 
 	* generic/tcl.decls:    Added changes to export an additional
